<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_ListActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editKod"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/msj_kod" />

        <EditText
            android:id="@+id/editAD"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/msj_isim" />
    </LinearLayout>

    <EditText
        android:id="@+id/editFiyat"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/msj_fiyat">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editResim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/msj_img"/>

    <Button
        android:id="@+id/btnekle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ekle" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dokumantasyon" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/listele" />

</LinearLayout>
 